# lr

./: Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yaml  docker-push.yaml  release.yaml
lastfm-models/: Cargo.toml
listenbrainz-models/: Cargo.toml
lure/: Cargo.toml
lure-cli/: Cargo.toml
lure-cli/src/: config.rs  lib.rs  start.rs
lure-config/: Cargo.toml
lure-config/src/: lib.rs  revolt.rs
lure-resources/: Cargo.toml
lure-resources/resources/: config.sample.yaml
lure-resources/src/: lib.rs
lure-service-common/: Cargo.toml
lure-service-common/src/: lib.rs
lure-service-lastfm/: Cargo.toml
lure-service-lastfm-config/: Cargo.toml
lure-service-lastfm-config/src/: lib.rs
lure-service-lastfm/src/: lib.rs
lure-service-listenbrainz/: Cargo.toml
lure-service-listenbrainz-config/: Cargo.toml
lure-service-listenbrainz-config/src/: lib.rs
lure-service-listenbrainz/src/: lib.rs
revolt-api/: Cargo.toml
revolt-api/src/: lib.rs
revolt-models/: Cargo.toml
