[package]
name = "lure-service-lastfm"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
lastfm-models = { path = "../lastfm-models" }
lure-service-common = { path = "../lure-service-common" }
lure-service-lastfm-config = { path = "../lure-service-lastfm-config" }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
